microservices/service_lb/basic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-deployment
  labels:
    app: basic-deployment-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: basic-deployment-app
  template:
    metadata:
      labels:
        app: basic-deployment-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.3
        ports:
        - containerPort: 80
