microservices/service_lb/clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clusterip-deployment
  labels:
    app: clusterip-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clusterip-app
  template:
    metadata:
      labels:
        app: clusterip-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  type: ClusterIP
  selector:
    app: clusterip-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
