microservices/service_lb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-ingress-service
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: example-ingress-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  example-ingress-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-ingress-deployment
spec:
  selector:
    matchLabels:
      app: example-ingress-app
  replicas: 3
  template:
    metadata:
      labels:
        app: example-ingress-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
